--- a/force-app/main/default/lwc/salesforceAI/salesforceAI.css
+++ b/force-app/main/default/lwc/salesforceAI/salesforceAI.css
@@ -1,32 +1,13 @@
-.chat-container {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    max-height: 500px;
-    overflow: hidden;
-}
-
-.chat-content {
-    flex-grow: 1;
-    overflow-y: auto;
-    padding: 1rem;
-    margin-bottom: 1rem;
-}
-
-.input-container {
-    display: flex;
-}
-
-.chat-input {
-    flex-grow: 1;
-}
-
 .user-message {
     text-align: right;
     margin-bottom: 0.5rem;
 }
 
-.bot-message {
-    text-align: left;
-    margin-bottom: 0.5rem;
+.slds-chat-message__text_outbound{
+    background-color: green;
+}
+
+.slds-chat-message__text_inbound{
+    background-color: #444b9b;
+    color: #fff;
 }
